# MFTK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  configure.sh  install.sh
MFTK/: CMakeLists.txt
MFTK/include/MFTK/: Tk.h
MFTK/include/MFTK/Common/: GridData.h
MFTK/include/MFTK/Common/Time/: ITimerOnTimeoutHandler.h  Timer.h
MFTK/include/MFTK/Common/Utils/: UtfConverter.h
MFTK/include/MFTK/Exceptions/: FontNotFoundException.h  NullWindowException.h  UnableToCreateWindowException.h  WidgetNotAddedToWindowException.h
MFTK/include/MFTK/ResourceManager/: FontData.h  ResourceManager.h
MFTK/include/MFTK/Widget/: Widget.h
MFTK/include/MFTK/Widget/EntryWidget/: EntryWidget.h
MFTK/include/MFTK/Widget/EntryWidget/EventHandler/: EntryWidgetKeyPressedEventHandler.h  EntryWidgetMouseButtonPressedEventHandler.h  EntryWidgetMouseEnterEventHandler.h  EntryWidgetMouseExitEventHandler.h  EntryWidgetOnFocusOnEventHandler.h  EntryWidgetOnFocusOutEventHandler.h  EntryWidgetTextInputEventHandler.h
MFTK/include/MFTK/Widget/EntryWidget/TimerHandler/: CaretBlinkTimerTimeoutHandler.h
MFTK/include/MFTK/Widget/WidgetEventHandler/: IWidgetClickedEventHandler.h  IWidgetEnterEventHandler.h  IWidgetExitEventHandler.h  IWidgetHoverEventHandler.h  IWidgetKeyPressedEventHandler.h  IWidgetKeyReleasedEventHandler.h  IWidgetMouseButtonPressedEventHandler.h  IWidgetMouseButtonReleasedEventHandler.h  IWidgetMouseEnterEventHandler.h  IWidgetMouseExitEventHandler.h  IWidgetOnFocusOnEventHandler.h  IWidgetOnFocusOutEventHandler.h  IWidgetTextInputEventHandler.h
MFTK/include/MFTK/Window/: Window.h
MFTK/include/MFTK/Window/WindowEventHandler/: IWindowClosedEventHandler.h
MFTK/src/MFTK/: Tk.cpp
MFTK/src/MFTK/Common/Time/: Timer.cpp
MFTK/src/MFTK/Common/Utils/: UtfConverter.cpp
MFTK/src/MFTK/ResourceManager/: ResourceManager.cpp
MFTK/src/MFTK/Widget/: Widget.cpp
MFTK/src/MFTK/Widget/EntryWidget/: EntryWidget.cpp
MFTK/src/MFTK/Widget/EntryWidget/EventHandler/: EntryWidgetKeyPressedEventHandler.cpp  EntryWidgetMouseButtonPressedEventHandler.cpp  EntryWidgetMouseEnterEventHandler.cpp  EntryWidgetMouseExitEventHandler.cpp  EntryWidgetOnFocusOnEventHandler.cpp  EntryWidgetOnFocusOutEventHandler.cpp  EntryWidgetTextInputEventHandler.cpp
MFTK/src/MFTK/Window/: Window.cpp
MFTK_Examples/SimpleWindow/: .gitignore  CMakeLists.txt  clean.sh  configure.sh  install.sh
MFTK_Examples/SimpleWindow/Scripts/: clean.bat  clean.sh  configure.bat  configure.sh  install.bat  install.sh
MFTK_Examples/SimpleWindow/src/: OnMainWindowClosedEventHandler.h  OnMouseExitEventHandler.h  OnMouseHoverEventHandler.h  main.cpp
Scripts/: build.bat  build.sh  clean.bat  clean.sh  configure.bat  configure.sh  install.bat  install.sh
src/: OnKeyPressedEventHandler.h  OnMouseClickedEventHandler.h  OnMouseEnterEventHandler.h  OnMouseExitEventHandler.h  main.cpp
